# metro

./: .gitignore  LICENSE  README.md  dtfpl.cabal  hie.yaml  package-lock.json  package.json  package.yaml  stack.yaml
app/: Main.hs
docs/: README.md  compiler.md  language-reference.md
js/: main.js
src/: Main.hs  Util.hs
src/Language/: Dtfpl.hs  Metro.hs
src/Language/Dtfpl/: Config.hs  Eff.hs  Env.hs  Err.hs  Format.hs  Generate.hs  Log.hs  M.hs  NodeProc.hs  Parse.hs  ParseNative.hs  Parser.hs  Render.hs  Simplify.hs  Step.hs  Syntax.hs  Util.hs
src/Language/Dtfpl/Cli/: Main.hs
src/Language/Dtfpl/Err/: ErrLoc.hs  ErrMessage.hs  Format.hs  ShowErr.hs  Util.hs
src/Language/Dtfpl/Format/: Util.hs
src/Language/Dtfpl/Generate/: Convert.hs  ConvertErr.hs  GenerateErr.hs  Identifier.hs  Render.hs
src/Language/Dtfpl/Interface/: Changed.hs  Generate.hs  Parse.hs  Parser.hs  Render.hs  Syntax.hs
src/Language/Dtfpl/Log/: Verb.hs
src/Language/Dtfpl/M/: Util.hs
src/Language/Dtfpl/Module/: Cache.hs  Compile.hs  Context.hs  Cycle.hs  Deps.hs  Extensions.hs  Load.hs  Main.hs  ModFS.hs  ModuleErr.hs  Output.hs  Resolve.hs
src/Language/Dtfpl/NodeProc/: Message.hs
src/Language/Dtfpl/Parse/: CustomError.hs  Loc.hs  Parser.hs
src/Language/Dtfpl/Parser/: CustomError.hs  Expr.hs  Ident.hs  Lexer.hs  Literal.hs  Loc.hs
src/Language/Dtfpl/Simplify/: AliasCase.hs  CheckNativeParams.hs  Curry.hs  Gen.hs  GenIdentFull.hs  GenIdentPart.hs  GenLoc.hs  GenUtil.hs  InitGen.hs  MultiCase.hs  NameResolve.hs  ParseNative.hs  Reorder.hs  Resolve.hs  Sim.hs  SimM.hs  Simplifier.hs  SimplifyErr.hs  UnDef.hs  UnLamMatch.hs
src/Language/Dtfpl/Syntax/: A.hs  Annotation.hs  Core.hs  Source.hs  Util.hs
src/Language/Dtfpl/Util/: CEPath.hs  Counter.hs  EPath.hs  FS.hs
src/Language/ECMAScript/: Syntax.hs
src/Language/ECMAScript/Syntax/: Util.hs  Verify.hs
src/Language/Metro/: Config.hs  Err.hs  Format.hs  Generate.hs  Log.hs  NodeProc.hs  Parse.hs  Render.hs  Simplify.hs  Step.hs  Syntax.hs  Util.hs
src/Language/Metro/Cli/: Main.hs
src/Language/Metro/Err/: ErrLoc.hs  ErrMessage.hs  Format.hs  Util.hs
src/Language/Metro/Format/: Util.hs
src/Language/Metro/Generate/: GenerateErr.hs  Identifier.hs
src/Language/Metro/Interface/: Changed.hs  Generate.hs  Parse.hs  Render.hs  Syntax.hs
src/Language/Metro/Log/: Verb.hs
src/Language/Metro/Module/: Cache.hs  Compile.hs  Context.hs  Cycle.hs  Deps.hs  Extensions.hs  Main.hs  ModFS.hs  ModuleErr.hs  Resolve.hs
src/Language/Metro/Parse/: CustomError.hs  Loc.hs
src/Language/Metro/Simplify/: AliasCase.hs  CheckNativeParams.hs  Curry.hs  GenIdentFull.hs  GenIdentPart.hs  InitGen.hs  NameResolve.hs  ParseNative.hs  Reorder.hs  SimplifyErr.hs  UnDef.hs  UnLamMatch.hs
src/Language/Metro/Syntax/: Util.hs
src/Language/Metro/Util/: CEPath.hs  Counter.hs  EPath.hs  FS.hs
