name:                dtfpl
version:             0.1.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/qsctr/dtfpl
license:             MIT
license-file:        LICENSE
author:              qsctr
copyright:           2017 qsctr
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dtfpl
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Language.Dtfpl
                     , Language.Dtfpl.Config
                     , Language.Dtfpl.Err
                     , Language.Dtfpl.Generate.Convert
                     , Language.Dtfpl.Generate.Render
                     , Language.Dtfpl.M
                     , Language.Dtfpl.Parse.CustomError
                     , Language.Dtfpl.Parse.Loc
                     , Language.Dtfpl.Parse.Parser
                     , Language.Dtfpl.Syntax
                     , Language.ECMAScript.Syntax
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , data-or
                     , megaparsec
                     , mtl
                     , text
                     , typed-process
  ghc-options:         -Wall
